2007-12-20  Hans Boehm <Hans.Boehm@hp.com>
	
	* alloc.c: Deal correctly with address wrapping for 
	GC_greatest_plausible_heap_addr and GC_least_plausible_heap_addr.
	* finalize.c, include/gc.h (GC_register_disappearing_link,
	GC_register_finalizer_inner): Improve out-of-memory handling.
	* include/private/gc_pmark.h: Fix comment spelling.

2007-12-18  Hans Boehm <Hans.Boehm@hp.com> (really mainly Peter Wang)

	* include/gc_inline.h, include/gc_tiny_fl.h: cleanups to make usable
	in other contexts.

2007-12-18  Hans Boehm <Hans.Boehm@hp.com> (really Radek Polak)

	* include/gc.h: Don't define GC_HAVE_BUILTIN_BACKTRACE for uclibc.

2007-12-18  Hans Boehm <Hans.Boehm@hp.com>

	* gc_cpp.cc: Don't include gc_cpp.h from local directory.

2007-12-18  Hans Boehm <Hans.Boehm@hp.com> (really Adam Megacz)

	* allchblk.c, configure.ac (add --enable-munmap)
	* configure: Regenerate.

2007-12-10  Andreas Tobler  <a.tobler@schweiz.org>

	* dyn_load.c (GC_dyld_image_add): Remove ifdef clause and use the macro
	GC_GETSECTBYNAME instead.
	* include/private/gc_priv.h: Define GC_GETSECTBYNAME according to the
	architecture (Darwin).

2007-10-24  Hans Boehm <Hans.Boehm@hp.com>

	* reclaim.c (GC_bytes_found): Expand comment.
	* thread_local_alloc.c (GC_malloc_atomic, GC_gcj_malloc): Pass
	granules, not bytes, to GC_FAST_MALLOC_GRANS.
	* include/gc.h: Never include gc_local_alloc.h.
	* tests/test.c: Add size zero allocation tests.

2007-10-23  Hans Boehm <Hans.Boehm@hp.com>

	* malloc.c: Update GC_large_allocd_bytes on explicit deallocation.
	* allchblk.c: Sanity check GC_max_large_allocd_bytes.

2007-10-23  Hans Boehm <Hans.Boehm@hp.com> (Really Manuel Serrano)

	* Makefile.direct: Invoke $(MAKE) instead of make.

2007-10-23  Hans Boehm <Hans.Boehm@hp.com>

	* doc/scale.html: Reflect gc7 thread local allocation behavior.

2007-10-23  Hans Boehm <Hans.Boehm@hp.com> (really Petter Urkedal)

	* include/extra/gc.h, include/extra/gc_cpp.h: New.