@@ -1,4 +1,9 @@
 2007-12-20  Hans Boehm <Hans.Boehm@hp.com>
+
+	* include/gc.h, doc/README.macros: Add GC_NO_THREAD_REDIRECTS,
+	GC_NO_THREAD_DECLS, don't test explicitly for GC_SOLARIS_THREADS.
+
+2007-12-20  Hans Boehm <Hans.Boehm@hp.com>
 	
 	* alloc.c: Deal correctly with address wrapping for 
 	GC_greatest_plausible_heap_addr and GC_least_plausible_heap_addr.
